WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239767
REGRESSION(
249114@main
) [GTK] Crashes on shutdown if the display is not set
https://bugs.webkit.org/show_bug.cgi?id=239767
Summary
REGRESSION(249114@main) [GTK] Crashes on shutdown if the display is not set
Alberto Garcia
Reported
2022-04-26 06:19:52 PDT
Running one of the devhelp tests crashes since WebKitGTK 2.36.1 if there's no display: error: XDG_RUNTIME_DIR not set in the environment. (test:5926): GLib-GObject-WARNING **: 14:00:44.774: invalid (NULL) pointer instance (test:5926): GLib-GObject-CRITICAL **: 14:00:44.774: g_signal_connect_data: assertion 'G_TYPE_CHECK_INSTANCE (instance)' failed (test:5926): Gdk-CRITICAL **: 14:00:44.774: gdk_wayland_display_get_wl_display: assertion 'GDK_IS_WAYLAND_DISPLAY (display)' failed EGLDisplay Initialization failed: EGL_NOT_INITIALIZED Thread 1 "test" received signal SIGSEGV, Segmentation fault. 0x00007ffff2c94ae7 in wl_display_disconnect () from /usr/lib/x86_64-linux-gnu/libwayland-client.so.0 (gdb) bt #0 0x00007ffff2c94ae7 in wl_display_disconnect () at /usr/lib/x86_64-linux-gnu/libwayland-client.so.0 #1 0x00007ffff5930735 in WebCore::PlatformDisplayWayland::~PlatformDisplayWayland() () at ./Source/WebCore/platform/graphics/wayland/PlatformDisplayWayland.cpp:105 #2 0x00007ffff5930749 in WebCore::PlatformDisplayWayland::~PlatformDisplayWayland() () at ./Source/WebCore/platform/graphics/wayland/PlatformDisplayWayland.cpp:107 #3 0x00007ffff7df4f77 in __run_exit_handlers (status=0, listp=0x7ffff7f88738 <__exit_funcs>, run_list_atexit=run_list_atexit@entry=true, run_dtors=run_dtors@entry=true) at exit.c:108 #4 0x00007ffff7df511a in __GI_exit (status=<optimized out>) at exit.c:139 #5 0x00007ffff7ddd804 in __libc_start_main (main= 0x555555555149 <main>, argc=1, argv=0x7fffffffec28, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffffffec18) at ../csu/libc-start.c:366 #6 0x000055555555508a in _start ()
Attachments
Patch
(4.37 KB, patch)
2022-05-04 02:26 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2022-04-26 06:21:59 PDT
Almost certainly due to this change:
https://github.com/WebKit/WebKit/commit/72fad08f2bfe7d2744c3217fe0ec0afcc671c53e
Carlos Garcia Campos
Comment 2
2022-05-04 02:26:16 PDT
Created
attachment 458781
[details]
Patch
Alberto Garcia
Comment 3
2022-05-04 12:26:56 PDT
Thanks, I confirm that the patch fixes the devhelp tests.
EWS
Comment 4
2022-05-05 01:34:44 PDT
Committed
r293826
(
250299@main
): <
https://commits.webkit.org/250299@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458781
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug