REGRESSION(249114@main) [GTK] Crashes on shutdown if the display is not set https://bugs.webkit.org/show_bug.cgi?id=239767

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2022-05-05
Reviewed by Michael Catanzaro.

Handle the case of PlatformDisplay created with a nullptr GdkDisplay.

* platform/graphics/PlatformDisplay.cpp:
(WebCore::PlatformDisplay::PlatformDisplay):
* platform/graphics/wayland/PlatformDisplayWayland.cpp:
(WebCore::PlatformDisplayWayland::PlatformDisplayWayland):
(WebCore::PlatformDisplayWayland::~PlatformDisplayWayland):
* platform/graphics/x11/PlatformDisplayX11.cpp:
(WebCore::PlatformDisplayX11::PlatformDisplayX11):
(WebCore::PlatformDisplayX11::~PlatformDisplayX11):

Canonical link: https://commits.webkit.org/250299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293826 268f45cc-cd09-0410-ab3c-d52691b4dbfc